@@ -9,6 +9,11 @@
       http://xml.apache.org/xerces2-j/javadocs/dom3-api/index.html Section 2.10
     * Removed the whitespace in element content checkbox from the options since
       it's ignored
+    * Removed the show whitespace only nodes check box since showing
+      whitespace only nodes in conjunction with formatting options makes
+      synchronization between options and the document difficult.
+    * Made the DocumentBuffer class extend XMLDocument so that there is one
+      class that deals with the document as a data model.
 
 8/19/2004   version 0.2 pre20   Ian Lewis <IanLewis@member.fsf.org>
 
